--- a/style/all.css
+++ b/style/all.css
@@ -133,9 +133,28 @@ table {
   border-spacing: 0;
 }
 
+@font-face {
+  font-family: "Roboto";
+  font-weight: 500;
+  src: url("../../font/squeez/roboto-medium-webfont.woff2") format("woff2"), url("../../font/squeez/roboto-medium-webfont.woff") format("woff");
+}
+@font-face {
+  font-family: "Roboto";
+  font-weight: 300;
+  src: url("../../font/squeez/roboto-light-webfont.woff2") format("woff2"), url("../../font/squeez/roboto-light-webfont.woff2") format("woff");
+}
+@font-face {
+  font-family: "Roboto";
+  font-weight: 900;
+  src: url("../../font/squeez/roboto-black-webfont.woff2") format("woff2"), url("../../font/squeez/roboto-black-webfont.woff") format("woff");
+}
+body {
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+}
+
 body {
   color: black;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1rem;
   line-height: 1.5;
 }
@@ -203,8 +222,14 @@ img {
 .btn-primary {
   background-color: hsl(192, 70%, 51%);
 }
+.btn-primary:hover {
+  background-color: #1f94b2;
+}
 .btn-secondary {
   background-color: hsl(233, 26%, 24%);
+}
+.btn-secondary:hover {
+  background-color: #1a1d2d;
 }
 
 .bg-cover {
