--- a/style/components/_buttons.scss
+++ b/style/components/_buttons.scss
@@ -9,9 +9,15 @@
 
   &-primary {
     background-color: $color-primary;
+    &:hover {
+      background-color:darken($color-primary, 10%)
+    };
   }
 
   &-secondary {
     background-color: $color-secondary;
+    &:hover {
+      background-color: darken($color-secondary, 10%)
+    };
   }
 }
